@@ -1,8 +1,0 @@
-language: r
-cache: packages
-warnings_are_errors: false
-r: bioc-devel
-r_github_packages:
-  - jimhester/covr
-after_success:
-  - Rscript -e 'covr::codecov()'
