@@ -86,12 +86,18 @@ c(bibentry(bibtype = "Article",
 
     bibentry(bibtype = "Article",
            key = "gaphunter",
-           author = c(person(given = "Jean-Philippe", family = "Fortin"),
-                      person(given = c("Kasper", "D."), family = "Hansen")),
-           title = "'Gap hunting' to identify multimodal distributions of {DNA} methylation",
-           journal = "bioRxiv",
+           author = c(person(given = c("Shan",  "V."), family = "Andrews"),
+                      person(given = "Christine", family = "Ladd-Acosta"),
+                      person(given = c("Andrew", "P."), family = "Feinberg"),
+                      person(given = c("Kasper", "D."), family = "Hansen"),
+                      person(given = c("M.", "Daniele"), family = "Fallin")),
+           title = "'Gap hunting' to characterize clustered probe signals in Illumina methylation array data",
+           journal = "Epigenetics & Chromatin",
            year = "2016",
-           doi = "10.1101/059659",
+           volume = "9",
+           number = "56",
+           doi = "10.1186/s13072-016-0107-z",
+           pubmed = "27980682",
            header = "Gap hunting is described in:"),
 
     bibentry(bibtype = "Article",
